2009-09-30	Mike Massonnet
=== Release 1.1.1 ===

2009-09-17	Mike Massonnet
Add info regarding the pattern entry

	- panel-plugin/settings-dialog.glade:
		Add a label under the pattern entry to inform about the
		G_REGEX_ANCHORED flag.

2009-09-12	Mike Massonnet
Change default option 'ignore selections' to true

2009-09-12	Mike Massonnet
New option 'ignore selections'

	- panel-plugin/settings-dialog.glade:
		Detached the Exclude selections from history option from the
		Sync selections and move it down to the History frame as
		Ignore selections.
	- panel-plugin/xfce4-clipman-settings.c:
		Drop the binding between sync selections and the ignore
		selections checkbox sensitivity.
	- panel-plugin/collector.c:
		Catch the selections in addition if the ignore selections is
		false as it is now independant from the sync selections
		option.

2009-09-03	Mike Massonnet
=== Release 1.1.0 ===

2009-07-28	Mike Massonnet
Update documentation (added Dannish and Italian, and updated Galician)

2009-07-28	Mike Massonnet
Set max history size to 1000 (bug #5618)

2009-07-24	Mike Massonnet
Add Simplified Chinese documentation

2009-07-15	Mike Massonnet
Run PNG images inside docs/manual through optipng (26%~ decrease)

2009-07-05	Mike Massonnet
Fix previous commit

2009-07-05	Mike Massonnet
Add reverse-order property to the menu

	- panel-plugin/menu.c:
		Install a new property reverse-order and when set to TRUE it
		reverses the order the clipboard history inside the menu (bug
		#5502).
	- panel-plugin/plugin.c:
		Bind the new menu property reverse-order to the Xfconf
		property /tweaks/reverse-menu-order.

2009-07-05	Mike Massonnet
Add French documentation

2009-07-04	Mike Massonnet
Use LC_MESSAGES to show the help in the user locale

	- panel-plugin/xfce4-clipman-settings.c:
		Use LC_MESSAGES as LC_ALL isn't always set (fix bug #5524).

2009-07-04	Mike Massonnet
Update documentation

2009-07-04	Mike Massonnet
Update NEWS and bump release to 1.1.0

2009-07-04	Mike Massonnet