@@ -1,3 +1,12 @@
+2009-10-31	Mike Massonnet
+Fix popup from keyboard shortcut not always working #bug 5909
+
+	Factorize the popup action inside plugin.c(plugin_popup_menu) and add
+	a menu position function callback pointer within the MyPlugin
+	structure.
+	Add workaround from xfdesktop for the popup action called through a
+	keyboard shortcut.
+
 2009-09-30	Mike Massonnet
 === Release 1.1.1 ===
 
